--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.5.2"
+    "astro": "^5.5.2",
+    "sharp": "^0.33.5"
+  },
+  "devDependencies": {
+    "astro-compress": "^2.3.6"
   }
 }
